cards/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards-deployment
  labels:
    app: cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
      - name: cards
        image: baicham/securedbank-cards-api:s18
        ports:
        - containerPort: 8092
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
