cards/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cards
spec:
  selector:
    app: cards
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
